fix: Title Spacing

--- a/Card-Animations/style.css
+++ b/Card-Animations/style.css
@@ -16,7 +16,7 @@ body{
 /* Animation Styles */
 #animation-title{
     position   : absolute;
-    top        : 5%;
+    top        : 7%;
     font-family: 'Sakurata';
     font-size  : 10vmin;
     color      : white;
